# glfos-samba-shares

./: .gitignore  Cargo.toml  README.md  TESTING.md  build-rust.sh  flake.nix  meson.build  package.nix  run-dev.sh  run-tests.sh
data/: meson.build  org.dupot.glfossambashares.in  org.dupot.samba-shares.desktop.in
data/icons/: meson.build
po/: POTFILES  en.po  fr.po  meson.build
src/: config.rs  main.rs
src/models/: mod.rs
src/samba/: mod.rs  mount_operations.rs  remote_share_config.rs  share_config.rs  sudo_write.rs
src/ui/: app.rs  window.rs
src/ui/dialogs/: add_remote_share.rs  add_share.rs  edit_remote_share.rs  edit_share.rs  list_shares.rs  mod.rs  remote_list_shares.rs  welcome.rs
src/ui/widgets/: mod.rs
src/utils/: mod.rs
tests/: README.md  integration_tests.rs
