[package]
name = "samba-share"
version = "1.0.0"
edition = "2021"
authors = ["Michael Bertocchi"]
license = "GPL-3.0-or-later"
description = "A simple GUI to manage Samba shares on NixOS"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
glib = "0.20"
gio = "0.20"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
rnix = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
users = "0.11"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
