icondir = datadir / 'icons' / 'hicolor'

install_data('samba-shares-16x16.png', install_dir: icondir / '16x16' / 'apps', rename: 'samba-shares.png')
install_data('samba-shares-32x32.png', install_dir: icondir / '32x32' / 'apps', rename: 'samba-shares.png')
install_data('samba-shares-48x48.png', install_dir: icondir / '48x48' / 'apps', rename: 'samba-shares.png')
install_data('samba-shares-64x64.png', install_dir: icondir / '64x64' / 'apps', rename: 'samba-shares.png')
install_data('samba-shares-128x128.png', install_dir: icondir / '128x128' / 'apps', rename: 'samba-shares.png')
install_data('samba-shares-256x256.png', install_dir: icondir / '256x256' / 'apps', rename: 'samba-shares.png')
install_data('samba-shares-512x512.png', install_dir: icondir / '512x512' / 'apps', rename: 'samba-shares.png')
install_data('samba-shares-128x128.png', install_dir: pkgdatadir, rename: 'logo.png')
